k8s/infra/elasticsearch.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: default
  labels:
    app: elasticsearch
spec:
  ports:
  - port: 9200
    name: http
    targetPort: 9200
  - port: 9300
    name: transport
    targetPort: 9300
  selector:
    app: elasticsearch
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: default
spec:
  serviceName: "elasticsearch"
  replicas: 1 
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      
      securityContext:
        fsGroup: 1000 
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        resources:
          requests:
           
            memory: "768Mi" 
            cpu: "100m" 
          limits:
            memory: "1.5Gi"
            cpu: "1000m"
        volumeMounts:
        - name: elastic-data
          mountPath: /usr/share/elasticsearch/data
        
       
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: 9200
          initialDelaySeconds: 40 
          periodSeconds: 10
          failureThreshold: 5    
        
        livenessProbe:
          httpGet:                
            path: /_cluster/health
            port: 9200
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 5

  volumeClaimTemplates:
  - metadata:
      name: elastic-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp2"
      resources:
        requests:
          storage: 2Gi
