k8s/infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-games-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: fiap-srv-auth-manager
            port:
              number: 80

      - path: /api/games
        pathType: Prefix
        backend:
          service:
            name: fiap-srv-games
            port:
              number: 80

      - path: /api/recommendations 
        pathType: Prefix
        backend:
          service:
            name: fiap-srv-games
            port:
              number: 80

      - path: /api/library
        pathType: Prefix
        backend:
          service:
            name: fiap-srv-games
            port:
              number: 80

      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: fiap-srv-payment
            port:
              number: 80

      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: fiap-srv-user
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 80
